# Pneumonia-Detection

./: README.md  pyproject.toml
src/pneumonia_detector/: __init__.py  cli.py  config.py  data.py  infer.py  model.py  train.py
tests/: test_data_config.py  test_imports.py  test_model.py
